add import vocabulary page
